fix spacing around cards and threads.

--- a/src/components/chat/chat-thread.scss
+++ b/src/components/chat/chat-thread.scss
@@ -5,7 +5,6 @@
   overflow-y: scroll;
   overflow-x: hidden;
   .chat-thread {
-    width: 100%;
     margin: 2px;
     white-space: pre-wrap;
     .user-icon {
@@ -27,6 +26,7 @@
       }
     }
     .chat-thread-header {
+      margin: 0 2px;
       display: flex;
       flex-direction: row;
       border: solid 2px var(--charcoal-light-2);
